# polyuworld-emscripten-addon-template

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build-webpack-ubuntu.yml  build-webpack-windows.yml  sync-repo.yml
src/: index.ts
src/cpp/: CMakeLists.txt  main.cpp
